--- a/SonataDiscordProxyBot/SonataDiscordProxyBot.csproj
+++ b/SonataDiscordProxyBot/SonataDiscordProxyBot.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+    <PackageReference Include="System.Reactive" Version="4.1.5" />
   </ItemGroup>
 
   <ItemGroup>
