User layer now has to provide which character to log in as

--- a/SonataDiscordProxyBot/config.json
+++ b/SonataDiscordProxyBot/config.json
@@ -3,7 +3,8 @@
 	"BotDiscordId": "",
 	"DiscordToken": "",
 	"GameUsername": "",
-	"GamePassword": "",
+  "GamePassword": "",
+  "CharacterName": "", 
 	"CommandChannel": 0,
 	"ErrorChannel": 0,
 	"ChannelMappings": {
